--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "socialv-ui-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.0"
+  },
   "dependencies": {
     "@amityco/js-sdk": "^5.9.0",
     "@amityco/ts-sdk": "^0.0.1-beta.10",
