--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-flv-player": "^1.0.9",
     "react-id-swiper": "^4.0.0",
     "react-leaflet": "^3.2.1",
     "react-redux": "^7.2.5",
